--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -29,6 +29,19 @@
             justify-content: space-between;
         }
     }
+
+    //
+
+    @include ab.breakpoint(lg) {
+        & .navbar__arrow {
+            rotate: -90deg;
+            transition: 0.5s;
+        }
+
+        & li.active > a > .navbar__arrow {
+            rotate: 0deg;
+        }
+    }
 }
 
 .top-mobileBar {
@@ -57,8 +70,8 @@
         inset: 0 30% 0 0;
         padding-right: 20px;
         background-color: var(--dropdown-bg);
-        z-index: 1;
-        overflow: auto;
+        z-index: 10;
+        overflow: scroll;
         translate: -100%;
         transition: 0.5s;
         //
@@ -88,17 +101,16 @@
         @include ab.breakpoint(lg) {
             position: fixed;
             inset: 0 0 0 0;
+            z-index: 9;
             background-color: rgba(0, 0, 0, 0.3);
             visibility: hidden;
             opacity: 0;
             transition: 0.5s;
         }
-        &.active {
-            @include ab.breakpoint(lg) {
-                visibility: visible;
-                opacity: 1;
-            }
-        }
+    }
+    &.active ~ &__overlay {
+        visibility: visible;
+        opacity: 1;
     }
 
     //
@@ -131,6 +143,11 @@
             font-size: 1.5rem;
             font-weight: 500;
             line-height: 1.46;
+            //
+            @include ab.breakpoint(lg) {
+                padding-top: 20px;
+                padding-bottom: 10px;
+            }
         }
         //
         > a::after {
@@ -164,6 +181,8 @@
             visibility: visible;
             opacity: 1;
         }
+
+        //
     }
 
     &__arrow {
