--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1175,6 +1175,25 @@ html.dark {
   }
 }
 
+.mb-top-action {
+  padding: 0 15px;
+  flex-direction: column;
+  gap: 20px;
+}
+.mb-top-action__item {
+  display: flex;
+  align-items: center;
+  gap: 14px;
+  /* Medium 15 */
+  color: var(--text-color);
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 2.2rem;
+}
+.mb-top-action__qtn {
+  margin-left: auto;
+}
+
 .navbar {
   margin-left: 130px;
   margin-right: auto;
@@ -1190,10 +1209,11 @@ html.dark {
     display: block;
     position: fixed;
     inset: 0 30% 0 0;
-    padding-right: 20px;
+    padding: 20px 20px 20px 0;
     background-color: var(--dropdown-bg);
     z-index: 10;
-    overflow: scroll;
+    overflow-y: scroll;
+    overscroll-behavior: contain;
     translate: -100%;
     transition: 0.5s;
   }
@@ -1224,7 +1244,7 @@ html.dark {
     position: fixed;
     inset: 0 0 0 0;
     z-index: 9;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.5);
     visibility: hidden;
     opacity: 0;
     transition: 0.5s;
@@ -1241,7 +1261,8 @@ html.dark {
 }
 .navbar__back {
   display: none;
-  padding: 15px;
+  padding-left: 20px;
+  padding-bottom: 20px;
 }
 .navbar__back > svg {
   cursor: pointer;
