--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -9,7 +9,7 @@ $grid-breakpoints: (
     xxl: 1400px,
 );
 
-@mixin breakpoint($key) {
+@mixin screen($key) {
     $point: map.get($grid-breakpoints, $key);
 
     @if ($point != null) {
