--- a/scss/components/_dropdown.scss
+++ b/scss/components/_dropdown.scss
@@ -14,7 +14,7 @@ $side-menu-scroll-width: 5px;
     align-items: center;
 }
 
-// @include ab.breakpoint(-) {
+// @include ab.screen(-) {
 //     content
 // }
 
@@ -36,7 +36,7 @@ $side-menu-scroll-width: 5px;
 .navbar__link:hover .dropdown {
     display: block;
 }
-@include ab.breakpoint(lg) {
+@include ab.screen(lg) {
     .navbar__link:hover .dropdown {
         display: none;
     }
@@ -48,7 +48,7 @@ $side-menu-scroll-width: 5px;
 .dropdown {
     display: none;
     position: absolute;
-    @include ab.breakpoint(lg) {
+    @include ab.screen(lg) {
         // display: block;
         position: static;
         padding-top: 0;
@@ -67,7 +67,7 @@ $side-menu-scroll-width: 5px;
         border-radius: 20px;
         background-color: var(--dropdown-bg);
         box-shadow: var(--dropdown-shadow);
-        @include ab.breakpoint(lg) {
+        @include ab.screen(lg) {
             height: auto;
             padding: 0;
             border-radius: 0;
@@ -88,7 +88,7 @@ $side-menu-scroll-width: 5px;
 .drop-menu {
     &__side {
         width: $mega-sideMenu-width;
-        @include ab.breakpoint(lg) {
+        @include ab.screen(lg) {
             width: 100%;
             display: block;
             position: static;
@@ -97,7 +97,7 @@ $side-menu-scroll-width: 5px;
 
     &__main {
         position: absolute;
-        @include ab.breakpoint(lg) {
+        @include ab.screen(lg) {
             display: none;
             position: static;
         }
@@ -116,7 +116,7 @@ $side-menu-scroll-width: 5px;
         visibility: hidden;
         opacity: 0;
         transition: 0.5s;
-        @include ab.breakpoint(lg) {
+        @include ab.screen(lg) {
             visibility: visible;
             opacity: 1;
         }
@@ -127,7 +127,7 @@ $side-menu-scroll-width: 5px;
             opacity: 1;
             inset: 0 0 0 0;
             padding-left: 0;
-            @include ab.breakpoint(lg) {
+            @include ab.screen(lg) {
                 padding-left: calc(
                     $side-menu-padding-right * 0.5 + $side-menu-scroll-width
                 );
@@ -146,7 +146,7 @@ $side-menu-scroll-width: 5px;
             height: calc($mega-menu--height - 60px);
             overflow-y: scroll;
             //
-            @include ab.breakpoint(lg) {
+            @include ab.screen(lg) {
                 height: auto;
                 overflow: visible;
             }
@@ -170,11 +170,11 @@ $side-menu-scroll-width: 5px;
         line-height: 1.5; /* 150% */
         &:not(:first-child) {
             margin-top: 30px;
-            @include ab.breakpoint(lg) {
+            @include ab.screen(lg) {
                 margin-top: 20px;
             }
         }
-        @include ab.breakpoint(lg) {
+        @include ab.screen(lg) {
             margin-top: 20px;
         }
     }
@@ -199,7 +199,7 @@ $side-menu-scroll-width: 5px;
     &__list {
         padding-left: 50px;
 
-        @include ab.breakpoint(lg) {
+        @include ab.screen(lg) {
             padding-left: 15px;
         }
     }
@@ -212,7 +212,7 @@ $side-menu-scroll-width: 5px;
         font-size: 1.4rem;
         line-height: 1.42;
 
-        @include ab.breakpoint(lg) {
+        @include ab.screen(lg) {
             padding-right: 0;
         }
     }
@@ -223,7 +223,7 @@ $side-menu-scroll-width: 5px;
         width: 100%;
         height: 100%;
         padding-bottom: 14px;
-        @include ab.breakpoint(lg) {
+        @include ab.screen(lg) {
             // margin-bottom: 15px;
             padding-right: 35px;
         }
@@ -234,7 +234,7 @@ $side-menu-scroll-width: 5px;
     }
 
     &__item--side > a {
-        @include ab.breakpoint(lg) {
+        @include ab.screen(lg) {
             padding-bottom: 0px;
             padding-top: 10px;
         }
@@ -244,7 +244,7 @@ $side-menu-scroll-width: 5px;
 }
 //  _________________________
 
-@include ab.breakpoint(lg) {
+@include ab.screen(lg) {
     .drop-menu__item--side.active > .drop-menu__main {
         display: block;
     }
