--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -7,7 +7,7 @@
     align-items: center;
 }
 
-// @include ab.breakpoint(-) {
+// @include ab.screen(-) {
 //     content
 // }
 
@@ -17,7 +17,7 @@
     padding: 20px 0;
     background: var(--header-bg-color);
 
-    @include ab.breakpoint(lg) {
+    @include ab.screen(lg) {
         padding: 10px 0;
     }
 
@@ -25,14 +25,14 @@
     &__inner {
         position: relative;
         @extend %flexLine;
-        @include ab.breakpoint(xl) {
+        @include ab.screen(xl) {
             justify-content: space-between;
         }
     }
 
     //
 
-    @include ab.breakpoint(lg) {
+    @include ab.screen(lg) {
         & .navbar__arrow {
             rotate: -90deg;
             transition: 0.5s;
@@ -47,7 +47,7 @@
 .top-mobileBar {
     display: none;
     cursor: pointer;
-    @include ab.breakpoint(lg) {
+    @include ab.screen(lg) {
         display: block;
         //
         img {
@@ -80,11 +80,11 @@
     margin-left: 130px;
     margin-right: auto;
     //
-    @include ab.breakpoint(xl) {
+    @include ab.screen(xl) {
         margin-left: 0;
         margin-right: 0;
     }
-    @include ab.breakpoint(lg) {
+    @include ab.screen(lg) {
         display: block;
         position: fixed;
         inset: 0 30% 0 0;
@@ -110,17 +110,17 @@
         }
     }
     &.active {
-        @include ab.breakpoint(lg) {
+        @include ab.screen(lg) {
             translate: 0%;
         }
     }
 
-    @include ab.breakpoint(sm) {
+    @include ab.screen(sm) {
         inset: 0 10% 0 0;
     }
 
     &__overlay {
-        @include ab.breakpoint(lg) {
+        @include ab.screen(lg) {
             position: fixed;
             inset: 0 0 0 0;
             z-index: 9;
@@ -138,7 +138,7 @@
     //
     &__list {
         @extend %flexLine;
-        @include ab.breakpoint(lg) {
+        @include ab.screen(lg) {
             display: block;
         }
     }
@@ -150,7 +150,7 @@
         > svg {
             cursor: pointer;
         }
-        @include ab.breakpoint(lg) {
+        @include ab.screen(lg) {
             display: block;
         }
     }
@@ -167,7 +167,7 @@
             font-weight: 500;
             line-height: 1.46;
             //
-            @include ab.breakpoint(lg) {
+            @include ab.screen(lg) {
                 padding-top: 20px;
                 padding-bottom: 10px;
             }
@@ -195,7 +195,7 @@
 
             background-image: url(../../assets/icon/mega-menu-arrow.svg);
             filter: var(--dropdown-bg-filter);
-            @include ab.breakpoint(lg) {
+            @include ab.screen(lg) {
                 content: none;
             }
         }
@@ -226,7 +226,7 @@
         background: var(--top-action-color);
         box-shadow: var(--top-action-shadow);
         //
-        @include ab.breakpoint(md) {
+        @include ab.screen(md) {
             display: none;
         }
         //
