--- a/scss/themes/_dark.scss
+++ b/scss/themes/_dark.scss
@@ -1,4 +1,6 @@
 html.dark {
+    --main-body-bg: #292e39;
+    //
     --text-color: rgb(255, 255, 255);
     --icon-color: brightness(0) saturate(100%) invert(100%) sepia(0%)
         saturate(7500%) hue-rotate(175deg) brightness(100%) contrast(113%);
@@ -15,5 +17,14 @@ html.dark {
     --drop-menu-hover-text: #0071dc;
     --drop-menu-separator: #171c28;
     --drop-menu-separator--thumb: rgba(255, 255, 255, 0.5);
-    --drop-menu-text-color : #B9BABE ;
+    --drop-menu-text-color: #b9babe;
+
+    //  slide-show
+    --slide-show-bar-color: #ffffff;
+
+    // category
+    --cate-item-bg: #171c28;
+    --cate-item-thumb-bg: #292e39;
+    --cate-item-price-text: #ffffff;
+    --cate-item-desc-text: #ffffff;
 }
