--- a/scss/themes/_dark.scss
+++ b/scss/themes/_dark.scss
@@ -27,4 +27,11 @@ html.dark {
     --cate-item-thumb-bg: #292e39;
     --cate-item-price-text: #ffffff;
     --cate-item-desc-text: #ffffff;
+
+    // product
+    --product-filter-bg: #171c28;
+    --product-filter-text: #ffffff;
+    --product-favBtn-bg: #292e39;
+    --product-favBtn-shadow: 0 20px 60px 5px rgba(124, 124, 124, 0.15);
+    --product-item-desc-text: #9e9da8;
 }
