--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -1,20 +1,3 @@
-button,
-input,
-textarea,
-select,
-a {
-    font-family: inherit;
-    font-size: inherit;
-    color: inherit;
-    padding: 0 0;
-    border: 0;
-    margin: 0;
-    outline: none;
-    text-decoration: none;
-    -webkit-tap-highlight-color: transparent;
-    background-color: transparent;
-}
-
 /*  */
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
@@ -144,4 +127,25 @@ q:after {
 table {
     border-collapse: collapse;
     border-spacing: 0;
+}
+
+button,
+input,
+textarea,
+select,
+a {
+    font-family: inherit;
+    font-size: inherit;
+    color: inherit;
+    padding: 0 0;
+    border: 0;
+    margin: 0;
+    outline: none;
+    text-decoration: none;
+    -webkit-tap-highlight-color: transparent;
+    background-color: transparent;
+}
+
+button {
+    cursor: pointer;
 }
