--- a/scss/themes/_light.scss
+++ b/scss/themes/_light.scss
@@ -35,4 +35,11 @@ html {
     --product-favBtn-shadow: 0 20px 60px 5px rgba(124, 124, 124, 0.25);
     --product-item-desc-text: #9e9da8;
 
+    // filter
+
+    --filter-bg: #ffffff;
+    --filter__price-line: #d2d1d6;
+    --filter__price-dot: #fff;
+    --filter__price-dot-border: #ffb700;
+    --filter__option-item-text: #9e9da8;
 }
