--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1328,6 +1328,11 @@ html {
   --product-favBtn-bg: #ffffff;
   --product-favBtn-shadow: 0 20px 60px 5px rgba(124, 124, 124, 0.25);
   --product-item-desc-text: #9e9da8;
+  --filter-bg: #ffffff;
+  --filter__price-line: #d2d1d6;
+  --filter__price-dot: #fff;
+  --filter__price-dot-border: #ffb700;
+  --filter__option-item-text: #9e9da8;
 }
 
 html.dark {
@@ -1357,6 +1362,8 @@ html.dark {
   --product-favBtn-bg: #292e39;
   --product-favBtn-shadow: 0 20px 60px 5px rgba(124, 124, 124, 0.15);
   --product-item-desc-text: #9e9da8;
+  --filter-bg: #ffffff;
+  --filter__price-line: #d2d1d6;
 }
 
 .top-action__btn, .top-action__group, .top-action, .navbar__link > a, .navbar__list, .header__inner {
@@ -1968,6 +1975,7 @@ html.dark {
 }
 
 .product__top {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -1980,10 +1988,18 @@ html.dark {
   border-radius: 6px;
   gap: 14px;
   background-color: var(--product-filter-bg);
+}
+.product__filter > span {
   color: var(--product-filter-text);
   font-size: 1.4rem;
   font-weight: 700;
   line-height: 1.42;
+}
+.product__filter-board {
+  position: absolute;
+  inset: 99% 0 auto;
+  padding-top: 20px;
+  z-index: 1;
 }
 .product__item {
   height: 100%;
@@ -2016,7 +2032,7 @@ html.dark {
   background-color: var(--product-favBtn-bg);
   box-shadow: var(--product-favBtn-shadow);
   position: absolute;
-  z-index: 2;
+  z-index: 0;
   bottom: 0;
   right: 0;
 }
@@ -2048,7 +2064,6 @@ html.dark {
   align-items: center;
   justify-content: space-between;
   color: var(--Secondary-Color-Secondary-1, #1a162e);
-  /* Medium 16 */
   color: var(--text-color);
   font-weight: 500;
   line-height: 1;
@@ -2057,6 +2072,138 @@ html.dark {
   display: flex;
   align-items: center;
   gap: 6px;
+}
+
+.filter__optionList, .filter__search, .filter__sizeList-unit, .filter__sizeList-num, .filter__sizeList {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.filter {
+  padding: 30px;
+  border-radius: 20px;
+  background-color: var(--filter-bg);
+  box-shadow: 0 20px 10px 20px rgba(0, 0, 0, 0.1);
+}
+.filter__header {
+  margin-bottom: 30px;
+  color: var(--text-color, #1a162e);
+  font-size: 2.2rem;
+  font-weight: 500;
+  line-height: 1.4;
+}
+.filter__body {
+  display: flex;
+}
+.filter__section {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+}
+.filter__title {
+  color: var(--text-color, #1a162e);
+  font-size: 2.1rem;
+  font-weight: 500;
+  line-height: 1.45;
+}
+.filter__separator {
+  align-self: stretch;
+  width: 2px;
+  background-color: #eee;
+}
+.filter__price-bar {
+  position: relative;
+  width: 100%;
+  height: 2px;
+  margin: 11px 0;
+  background-color: var(--filter__price-line);
+}
+.filter__price-bar::before, .filter__price-bar::after {
+  content: "";
+  display: block;
+  width: 22px;
+  height: 22px;
+  background-color: var(--filter__price-dot);
+  border-radius: 50%;
+  border: 5px solid var(--filter__price-dot-border);
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+.filter__price-bar::before {
+  translate: 750%;
+}
+.filter__price-bar::after {
+  translate: 50%;
+}
+.filter__price-range {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px 20px;
+  color: var(--text-color, #1a162e);
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.42;
+}
+.filter__price-range-input, .filter__price-range-input::placeholder {
+  color: var(--text-color, #1a162e);
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.42;
+}
+.filter__price-range-input {
+  display: block;
+  width: 100%;
+  padding: 6px 12px;
+  border-radius: 5px;
+  border: 1px solid var(--filter__price-line);
+}
+.filter__sizeList {
+  height: 45px;
+  padding: 5px 14px;
+  border-radius: 6px;
+  border: 1px solid var(--filter__price-line);
+  color: var(--text-color, #1a162e);
+  font-size: 1.4rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.42; /* 142.857% */
+  cursor: pointer;
+}
+.filter__sizeList-num {
+  width: 55%;
+}
+.filter__sizeList-unit {
+  flex: 1;
+}
+.filter__search {
+  height: 45px;
+  padding: 10px 16px;
+  border-radius: 6px;
+  border: 1px solid var(--filter__price-line);
+}
+.filter__optionItem {
+  cursor: pointer;
+  padding: 6px 12px;
+  border-radius: 6px;
+  border: 1px solid var(--filter__price-line);
+  color: var(--Secondary-Color-Secondary-2, #9e9da8);
+  transition: 0.5s;
+  font-size: 1.4rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.42;
+}
+.filter__optionItem:has(:checked) {
+  border-color: var(--drop-menu-hover-text);
+  color: var(--drop-menu-hover-text);
+}
+.filter__optionItem input {
+  display: none;
 }
 
 /*# sourceMappingURL=main.css.map */
