--- a/scss/components/_product.scss
+++ b/scss/components/_product.scss
@@ -1,6 +1,7 @@
 .product {
     //
     &__top {
+        position: relative;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -15,10 +16,21 @@
         gap: 14px;
         background-color: var(--product-filter-bg);
         //
-        color: var(--product-filter-text);
-        font-size: 1.4rem;
-        font-weight: 700;
-        line-height: 1.42;
+
+        > span {
+            color: var(--product-filter-text);
+            font-size: 1.4rem;
+            font-weight: 700;
+            line-height: 1.42;
+        }
+
+        //
+        &-board {
+            position: absolute;
+            inset: 99% 0 auto;
+            padding-top: 20px;
+            z-index: 1;
+        }
     }
 
     &__item {
@@ -52,7 +64,7 @@
             background-color: var(--product-favBtn-bg);
             box-shadow: var(--product-favBtn-shadow);
             position: absolute;
-            z-index: 2;
+            z-index: 0;
             bottom: 0;
             right: 0;
 
@@ -68,7 +80,6 @@
             &.active &-icon {
                 filter: none;
                 background-image: url(../../assets/icon/heart-red.svg);
-                
             }
         }
 
@@ -91,8 +102,6 @@
             justify-content: space-between;
             //
             color: var(--Secondary-Color-Secondary-1, #1a162e);
-
-            /* Medium 16 */
             color: var(--text-color);
             font-weight: 500;
             line-height: 1;
