--- a/scss/themes/_dark.scss
+++ b/scss/themes/_dark.scss
@@ -34,4 +34,9 @@ html.dark {
     --product-favBtn-bg: #292e39;
     --product-favBtn-shadow: 0 20px 60px 5px rgba(124, 124, 124, 0.15);
     --product-item-desc-text: #9e9da8;
+
+    // filter
+
+    --filter-bg: #ffffff;
+    --filter__price-line: #d2d1d6;
 }
