--- a/scss/themes/_dark.scss
+++ b/scss/themes/_dark.scss
@@ -37,6 +37,17 @@ html.dark {
 
     // filter
 
-    --filter-bg: #ffffff;
+    --filter-bg: #292e39;
     --filter__price-line: #d2d1d6;
+    --filter__price-dot: #292e39;
+    --filter__price-dot-border: #ffb700;
+    --filter__option-item-text: #9e9da8;
+
+    // cart preview
+    --cart-preview-text-color: #b9babe;
+    --cart-preview-bg: #292e39;
+    --cart-preview-separate-line: #171c28;
+    --cart-preview-checkout-btn: #ffb700;
+    --cart-preview-checkout-text: #1a162e;
+    --cart-preview-link: #0071dc;
 }
