--- a/scss/themes/_light.scss
+++ b/scss/themes/_light.scss
@@ -42,4 +42,12 @@ html {
     --filter__price-dot: #fff;
     --filter__price-dot-border: #ffb700;
     --filter__option-item-text: #9e9da8;
+
+    // cart preview
+    --cart-preview-text-color: #1a162e;
+    --cart-preview-bg: #ffffff;
+    --cart-preview-separate-line: #d2d1d6;
+    --cart-preview-checkout-btn: #ffb700;
+    --cart-preview-checkout-text : #1a162e ;
+    --cart-preview-link: #0071dc;
 }
