--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1333,6 +1333,12 @@ html {
   --filter__price-dot: #fff;
   --filter__price-dot-border: #ffb700;
   --filter__option-item-text: #9e9da8;
+  --cart-preview-text-color: #1a162e;
+  --cart-preview-bg: #ffffff;
+  --cart-preview-separate-line: #d2d1d6;
+  --cart-preview-checkout-btn: #ffb700;
+  --cart-preview-checkout-text: #1a162e ;
+  --cart-preview-link: #0071dc;
 }
 
 html.dark {
@@ -1362,8 +1368,17 @@ html.dark {
   --product-favBtn-bg: #292e39;
   --product-favBtn-shadow: 0 20px 60px 5px rgba(124, 124, 124, 0.15);
   --product-item-desc-text: #9e9da8;
-  --filter-bg: #ffffff;
+  --filter-bg: #292e39;
   --filter__price-line: #d2d1d6;
+  --filter__price-dot: #292e39;
+  --filter__price-dot-border: #ffb700;
+  --filter__option-item-text: #9e9da8;
+  --cart-preview-text-color: #b9babe;
+  --cart-preview-bg: #292e39;
+  --cart-preview-separate-line: #171c28;
+  --cart-preview-checkout-btn: #ffb700;
+  --cart-preview-checkout-text: #1a162e;
+  --cart-preview-link: #0071dc;
 }
 
 .top-action__btn, .top-action__group, .top-action, .navbar__link > a, .navbar__list, .header__inner {
@@ -1558,6 +1573,7 @@ html.dark {
 
 .top-action {
   gap: 20px;
+  position: relative;
 }
 .top-action__group {
   gap: 20px;
@@ -1601,6 +1617,18 @@ html.dark {
   border-radius: 10px;
   object-fit: cover;
   cursor: pointer;
+}
+.top-action__preview-cart {
+  display: none;
+  position: absolute;
+  top: 50%;
+  right: 0;
+  padding-top: 40px;
+  z-index: 1;
+}
+
+.top-action__preview-hover:hover .top-action__preview-cart {
+  display: block;
 }
 
 .home-wrap {
@@ -1994,12 +2022,27 @@ html.dark {
   font-size: 1.4rem;
   font-weight: 700;
   line-height: 1.42;
+  cursor: pointer;
 }
 .product__filter-board {
+  display: none;
   position: absolute;
   inset: 99% 0 auto;
   padding-top: 20px;
   z-index: 1;
+}
+@media (max-width: 991.8px) {
+  .product__filter-board {
+    inset: 99% 0 auto 30%;
+  }
+}
+@media (max-width: 767.8px) {
+  .product__filter-board {
+    inset: 99% 0 auto 20%;
+  }
+}
+.product__filter:hover .product__filter-board {
+  display: block;
 }
 .product__item {
   height: 100%;
@@ -2096,6 +2139,11 @@ html.dark {
 .filter__body {
   display: flex;
 }
+@media (max-width: 991.8px) {
+  .filter__body {
+    flex-direction: column;
+  }
+}
 .filter__section {
   flex: 1;
   display: flex;
@@ -2112,6 +2160,17 @@ html.dark {
   align-self: stretch;
   width: 2px;
   background-color: #eee;
+  margin: 0 14px;
+}
+.filter__separator--rotate {
+  margin: 0 30px;
+}
+@media (max-width: 991.8px) {
+  .filter__separator--rotate {
+    width: 100%;
+    height: 1px;
+    margin: 30px 0px 25px;
+  }
 }
 .filter__price-bar {
   position: relative;
@@ -2185,6 +2244,7 @@ html.dark {
   padding: 10px 16px;
   border-radius: 6px;
   border: 1px solid var(--filter__price-line);
+  color: var(--text-color);
 }
 .filter__optionItem {
   cursor: pointer;
@@ -2204,6 +2264,117 @@ html.dark {
 }
 .filter__optionItem input {
   display: none;
+}
+.filter__btn {
+  margin-top: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  gap: 20px;
+}
+@media (max-width: 991.8px) {
+  .filter__btn {
+    margin-top: 38px;
+  }
+}
+.filter__btn-cancel {
+  color: var(--filter__option-item-text);
+  font-size: 1.4rem;
+}
+.filter__btn-submit {
+  padding: 10px;
+  border-radius: 6px;
+  background-color: var(--filter__price-dot-border);
+  color: var(--text-color, #1a162e);
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.42;
+}
+
+.cart-preview__calc-line, .cart-preview__top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.cart-preview {
+  box-shadow: 0 40px 90px 20px rgba(23, 28, 40, 0.4);
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  width: 585px;
+  padding: 30px;
+  border-radius: 20px;
+  background-color: var(--cart-preview-bg);
+}
+.cart-preview__separator {
+  width: 100%;
+  height: 1px;
+  background-color: var(--cart-preview-separate-line);
+}
+.cart-preview__top {
+  font-size: 2rem;
+  line-height: 1.45rem;
+}
+.cart-preview__header {
+  color: var(--cart-preview-text-color, #1a162e);
+  font-weight: 500;
+}
+.cart-preview__linkPage {
+  color: var(--cart-preview-link, #0071dc);
+}
+.cart-preview__list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 25px;
+}
+.cart-preview__item {
+  color: var(--cart-preview-text-color, #1a162e);
+}
+.cart-preview__item-thumb {
+  width: 100%;
+  height: 150px;
+  object-fit: contain;
+}
+.cart-preview__item-name {
+  font-size: 1.4rem;
+  line-height: 1.42;
+  margin-top: 14px;
+}
+.cart-preview__item-price {
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 1.46;
+  margin-top: 5px;
+}
+.cart-preview__calc {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.cart-preview__calc-line {
+  color: var(--cart-preview-text-color, #1a162e);
+  font-size: 1.8rem;
+  line-height: 1.45;
+}
+.cart-preview__calc-line--bold {
+  font-size: 2.1rem;
+  font-weight: 500;
+}
+.cart-preview__checkout {
+  width: fit-content;
+  padding: 18px 40px;
+  border-radius: 999px;
+  margin-left: auto;
+  background-color: var(--cart-preview-checkout-btn);
+  color: var(--cart-preview-checkout-text, #1a162e);
+  font-size: 2rem;
+  font-weight: 500;
+  line-height: 1.45rem;
+  transition: 0.5s;
+}
+.cart-preview__checkout:hover {
+  color: white;
 }
 
 /*# sourceMappingURL=main.css.map */
