--- a/scss/components/_filter.scss
+++ b/scss/components/_filter.scss
@@ -1,3 +1,6 @@
+@use "../abstracts" as ab;
+// _______________________________________________
+
 %flexSpb {
     display: flex;
     justify-content: space-between;
@@ -21,6 +24,9 @@
 
     &__body {
         display: flex;
+        @include ab.screen(lg) {
+            flex-direction: column;
+        }
     }
 
     &__section {
@@ -41,6 +47,16 @@
         align-self: stretch;
         width: 2px;
         background-color: #eee;
+        margin: 0 14px;
+
+        &--rotate {
+            margin: 0 30px;
+            @include ab.screen(lg) {
+                width: 100%;
+                height: 1px;
+                margin: 30px 0px 25px;
+            }
+        }
     }
 
     &__price {
@@ -132,6 +148,8 @@
         padding: 10px 16px;
         border-radius: 6px;
         border: 1px solid var(--filter__price-line);
+        //
+        color: var(--text-color);
     }
 
     &__optionList {
@@ -157,6 +175,33 @@
 
         input {
             display: none;
+        }
+    }
+
+    &__btn {
+        margin-top: 18px;
+        @include ab.screen(lg) {
+            margin-top: 38px;
+        }
+        display: flex;
+        align-items: center;
+        justify-content: end;
+        gap: 20px;
+
+        //
+        &-cancel {
+            color: var(--filter__option-item-text);
+            font-size: 1.4rem;
+        }
+        &-submit {
+            padding: 10px;
+            border-radius: 6px;
+            background-color: var(--filter__price-dot-border);
+
+            color: var(--text-color, #1a162e);
+            font-size: 1.4rem;
+            font-weight: 500;
+            line-height: 1.42;
         }
     }
 }
