--- a/templates/header.html
+++ b/templates/header.html
@@ -2031,14 +2031,110 @@
                     <span class="top-action__title">03</span>
                 </button>
                 <div class="top-action__separator"></div>
-                <button class="top-action__btn">
-                    <img
-                        src="./assets/icon/cart.svg"
-                        alt=" "
-                        class="icon-color top-action__icon"
-                    />
-                    <span class="top-action__title">$65.42</span>
-                </button>
+                <div class="top-action__preview-hover" >
+                    <button class="top-action__btn">
+                        <img
+                            src="./assets/icon/cart.svg"
+                            alt=" "
+                            class="icon-color top-action__icon"
+                        />
+                        <span class="top-action__title">$65.42</span>
+                    </button>
+                    <div class="top-action__preview-cart">
+                        <section class="cart-preview">
+                            <div class="cart-preview__top">
+                                <div class="cart-preview__header">
+                                    You have <i>3</i> item
+                                </div>
+                                <a href="#!" class="cart-preview__linkPage"
+                                    >See All</a
+                                >
+                            </div>
+                            <div class="cart-preview__list">
+                                <article class="cart-preview__item">
+                                    <img
+                                        src="./assets/img/product/product-1.png"
+                                        alt=" "
+                                        class="cart-preview__item-thumb"
+                                    />
+                                    <div class="cart-preview__item-name">
+                                        Lavazza Coffee Blends
+                                    </div>
+                                    <div class="cart-preview__item-price">
+                                        $329.00
+                                    </div>
+                                </article>
+                                <article class="cart-preview__item">
+                                    <img
+                                        src="./assets/img/product/product-2.png"
+                                        alt=" "
+                                        class="cart-preview__item-thumb"
+                                    />
+                                    <div class="cart-preview__item-name">
+                                        Coffee Beans Espresso
+                                    </div>
+                                    <div class="cart-preview__item-price">
+                                        $39.99
+                                    </div>
+                                </article>
+                                <article class="cart-preview__item">
+                                    <img
+                                        src="./assets/img/product/product-3.png"
+                                        alt=" "
+                                        class="cart-preview__item-thumb"
+                                    />
+                                    <div class="cart-preview__item-name">
+                                        Qualità Oro Mountain
+                                    </div>
+                                    <div class="cart-preview__item-price">
+                                        $47.00
+                                    </div>
+                                </article>
+                            </div>
+                            <div class="cart-preview__separator"></div>
+                            <div class="cart-preview__calc">
+                                <div class="cart-preview__calc-line">
+                                    <span class="cart-preview__calc-title">
+                                        Subtotal :
+                                    </span>
+                                    <span class="cart-preview__calc-num">
+                                        $415.99
+                                    </span>
+                                </div>
+                                <div class="cart-preview__calc-line">
+                                    <span class="cart-preview__calc-title">
+                                        Texes :
+                                    </span>
+                                    <span class="cart-preview__calc-num">
+                                        Free
+                                    </span>
+                                </div>
+                                <div class="cart-preview__calc-line">
+                                    <span class="cart-preview__calc-title">
+                                        Shipping :
+                                    </span>
+                                    <span class="cart-preview__calc-num">
+                                        $10.00
+                                    </span>
+                                </div>
+                                <div
+                                    class="cart-preview__calc-line cart-preview__calc-line--bold"
+                                >
+                                    <span class="cart-preview__calc-title">
+                                        Total Price :
+                                    </span>
+                                    <span class="cart-preview__calc-num">
+                                        $425.99
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="cart-preview__separator"></div>
+                            <button class="cart-preview__checkout">
+                                Check Out All
+                            </button>
+                        </section>
+                    </div>
+                </div>
             </div>
 
             <a href="#!" class="top-action__user--wrap">
