--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -2,6 +2,9 @@
 @forward "./dropdown";
 @forward "./slideshow";
 @forward "./category";
-@forward  "./product" ;
-@forward  "./filter" ;
-@forward"./cart-preview";
+@forward "./product";
+@forward "./filter";
+@forward "./cart-preview";
+@forward "./review";
+@forward "./production";
+@forward "./page-path";
