--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1337,8 +1337,17 @@ html {
   --cart-preview-bg: #ffffff;
   --cart-preview-separate-line: #d2d1d6;
   --cart-preview-checkout-btn: #ffb700;
-  --cart-preview-checkout-text: #1a162e ;
+  --cart-preview-checkout-text: #1a162e;
   --cart-preview-link: #0071dc;
+  --page-path-bg: #ebebeb;
+  --page-path-arrow: brightness(0) saturate(100%) invert(69%) sepia(6%)
+      saturate(363%) hue-rotate(206deg) brightness(90%) contrast(95%);
+  --page-path-text: #9e9da8;
+  --page-path-active-text: #1a162e;
+  --production-content-bg: #f1f1f1;
+  --production-text: #1a162e;
+  --production-discount-text: #67b044;
+  --production-cta-bg: #ffb700;
 }
 
 html.dark {
@@ -1379,6 +1388,11 @@ html.dark {
   --cart-preview-checkout-btn: #ffb700;
   --cart-preview-checkout-text: #1a162e;
   --cart-preview-link: #0071dc;
+  --page-path-bg: #171C28;
+  --page-path-arrow: brightness(0) saturate(100%) invert(69%) sepia(6%)
+      saturate(363%) hue-rotate(206deg) brightness(90%) contrast(95%);
+  --page-path-text: #9e9da8;
+  --page-path-active-text: #FFFFFF;
 }
 
 .top-action__btn, .top-action__group, .top-action, .navbar__link > a, .navbar__list, .header__inner {
@@ -1619,16 +1633,19 @@ html.dark {
   cursor: pointer;
 }
 .top-action__preview-cart {
-  display: none;
+  visibility: hidden;
+  opacity: 0;
   position: absolute;
   top: 50%;
   right: 0;
   padding-top: 40px;
   z-index: 1;
+  transition: 0.5s;
 }
 
 .top-action__preview-hover:hover .top-action__preview-cart {
-  display: block;
+  visibility: visible;
+  opacity: 1;
 }
 
 .home-wrap {
@@ -1640,6 +1657,10 @@ html.dark {
   font-size: 2.4rem;
   font-weight: 700;
   line-height: 1.41;
+}
+
+.production-page-wrap {
+  margin-top: 30px;
 }
 
 .logo {
@@ -2025,7 +2046,9 @@ html.dark {
   cursor: pointer;
 }
 .product__filter-board {
-  display: none;
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.5s;
   position: absolute;
   inset: 99% 0 auto;
   padding-top: 20px;
@@ -2042,7 +2065,8 @@ html.dark {
   }
 }
 .product__filter:hover .product__filter-board {
-  display: block;
+  visibility: visible;
+  opacity: 1;
 }
 .product__item {
   height: 100%;
@@ -2158,8 +2182,8 @@ html.dark {
 }
 .filter__separator {
   align-self: stretch;
-  width: 2px;
-  background-color: #eee;
+  width: 1px;
+  background-color: var(--filter__price-line);
   margin: 0 14px;
 }
 .filter__separator--rotate {
@@ -2375,6 +2399,49 @@ html.dark {
 }
 .cart-preview__checkout:hover {
   color: white;
+}
+
+.production__img {
+  width: 100%;
+}
+.production__content {
+  padding: 50px;
+  background-color: var(--production-content-bg);
+}
+.production__name {
+  margin-bottom: 30px;
+  color: var(--production-text, #1a162e);
+  font-size: 2.6rem;
+  font-weight: 500;
+  line-height: 1.38; /* 138.462% */
+}
+
+.page-path {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+  padding: 20px;
+  border-radius: 10px;
+  background-color: var(--page-path-bg);
+}
+.page-path__item {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: var(--page-path-text, #9e9da8);
+  font-weight: 500;
+  line-height: 1.5;
+}
+.page-path__item img {
+  filter: var(--page-path-arrow);
+  width: 10px;
+}
+.page-path__item--onsite {
+  font-weight: 500;
+  color: var(--page-path-active-text);
+}
+.page-path__item--onsite img {
+  display: none;
 }
 
 /*# sourceMappingURL=main.css.map */
