--- a/templates/header.html
+++ b/templates/header.html
@@ -13,10 +13,10 @@
             />
         </button>
         <!--  -->
-        <section class="logo">
+        <a href="./index.html" class="logo">
             <img src="./assets/icon/main-logo.svg" alt=" " class="logo__icon" />
             <h1 class="logo__title">grocery mart</h1>
-        </section>
+        </a>
         <!--  -->
 
         <nav class="navbar" id="navbar">
@@ -2031,7 +2031,7 @@
                     <span class="top-action__title">03</span>
                 </button>
                 <div class="top-action__separator"></div>
-                <div class="top-action__preview-hover" >
+                <div class="top-action__preview-hover">
                     <button class="top-action__btn">
                         <img
                             src="./assets/icon/cart.svg"
