--- a/scss/components/_filter.scss
+++ b/scss/components/_filter.scss
@@ -153,7 +153,9 @@
     }
 
     &__optionList {
-        @extend %flexSpb;
+        display: flex;
+        gap: 20px;
+        flex-wrap: wrap;
     }
 
     &__optionItem {
