--- a/scss/components/_production.scss
+++ b/scss/components/_production.scss
@@ -7,14 +7,122 @@
     //
     &__content {
         padding: 50px;
+        border-radius: 20px;
         background-color: var(--production-content-bg);
     }
 
     &__name {
         margin-bottom: 30px;
-        color: var(--production-text, #1a162e);
+        color: var(--production-text);
         font-size: 2.6rem;
         font-weight: 500;
-        line-height: 1.38; /* 138.462% */
+        line-height: 1.38;
+    }
+
+    &__rate {
+        margin-bottom: 30px;
+        display: flex;
+        align-items: center;
+
+        &-stat {
+            color: var(--production-text);
+            font-size: 1.8rem;
+            font-weight: 500;
+            line-height: 1.44;
+        }
+    }
+
+    &__shipping {
+        //
+
+        &-item {
+            display: grid;
+            grid-template-columns: 20px auto;
+            gap: 5px 20px;
+            margin-bottom: 25px;
+            color: var(--production-shipping-text);
+            //
+            &-icon {
+                grid-row: span 2;
+                width: 100%;
+                // align-self: center;
+                margin-top: 3px;
+            }
+
+            &-type {
+                font-size: 1.8rem;
+                font-weight: 500;
+                line-height: 1.44;
+            }
+
+            &-desc {
+                font-size: 1.4rem;
+                font-weight: 400;
+                line-height: 1.42;
+            }
+        }
+    }
+
+    &__price {
+        padding: 20px;
+        border-radius: 6px;
+        border: 1px solid var(--production-price-border);
+        //
+        &-origin {
+            display: inline-block;
+            color: var(--production-price-text);
+            font-weight: 500;
+            line-height: 1.5;
+        }
+        &-discount {
+            padding: 1px 5px;
+            margin-left: 10px;
+            display: inline-block;
+            font-size: 1.4rem;
+            font-weight: 500;
+            line-height: 1.5;
+            color: var(--production-discount-text);
+            background: var(--production-discount-bg);
+        }
+
+        &-final {
+            margin: 20px 0;
+            color: var(--production-price-text);
+            font-size: 2.6rem;
+            font-weight: 500;
+            line-height: 1.38;
+        }
+
+        &-action {
+            display: flex;
+            gap: 10px;
+            flex-wrap: wrap;
+        }
+
+        &-btn {
+            flex-shrink: 0;
+
+            height: 45px;
+            padding: 0 20%;
+            border-radius: 6px;
+
+            background-color: var(--production-cta-bg);
+
+            color: var(--production-price-cta-text);
+            font-size: 1.8rem;
+            font-weight: 500;
+            line-height: 1.44;
+        }
+
+        &-fav {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+
+            height: 45px;
+            width: 45px;
+            border-radius: 8px;
+            border: 1px solid var(--production-price-border);
+        }
     }
 }
