--- a/scss/themes/_dark.scss
+++ b/scss/themes/_dark.scss
@@ -66,4 +66,10 @@ html.dark {
     --production-shipping-text: #eeeeee;
     --production-price-text: #eeeeee;
     --production-price-cta-text: #000000;
+
+    --production-tabs-text: #9e9da8;
+    --production-tabs-active-text: #ffffff;
+
+    // review
+    --review-item-bg: #171c28;
 }
