--- a/scss/themes/_light.scss
+++ b/scss/themes/_light.scss
@@ -73,4 +73,12 @@ html {
     --production-price-border: #b9babe;
     --production-price-text: #000000;
     --production-price-cta-text: #000000;
+
+    --production-tabs-text: #9e9da8;
+    --production-tabs-active-text: #1a162e;
+
+    // review 
+
+    --review-item-bg :#FAFAFD ;
+
 }
