--- a/scss/themes/_dark.scss
+++ b/scss/themes/_dark.scss
@@ -72,4 +72,15 @@ html.dark {
 
     // review
     --review-item-bg: #171c28;
+
+    // user nav
+    --user-nav-header-text: #ffffff;
+    --user-nav-avatar-border: 5px solid rgba(255, 255, 255, 0.2);
+    --user-nav-list-text: #b9babe;
+    --user-nav-body-bg: #171C28;
+    --user-nav-shadow : 0 20px 60px 10px rgba(23, 28, 40, 0.20);
+
+    //  user page
+
+
 }
