--- a/templates/header.html
+++ b/templates/header.html
@@ -2137,7 +2137,7 @@
                 </div>
             </div>
 
-            <a href="#!" class="top-action__user--wrap">
+            <a href="./user.html" class="top-action__user--wrap">
                 <img
                     src="./assets/img/avatar.jpg"
                     alt="user"
